add extra filters to realestate 2
